--- a/acgtsite/index.html
+++ b/acgtsite/index.html
@@ -44,10 +44,10 @@
       </form>
       </div>
       <div class="form2">
-      <h2>Upload File (After Login)</h2>
+      <h2>Upload File </h2>
       <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
         <label for="file">Select file:</label>
-        <input type="file" id="file" name="file" required>
+        <input type="file" id="biodata-file" name="file" required>
         <br>
 
         <button type="submit">Upload</button>
@@ -60,6 +60,11 @@
   <div class="space">
   </div>
 
+  <section id="report-section">
+    <h2>Your Nutritional Reference Sheet</h2>
+    <p>This is where the report content will be displayed after processing your bioinformatics data.</p>
+  </section>
+  
   <footer>
     <p>&copy; 2024 Viridian</p>
   </footer>
