--- a/acgtsite/index.html
+++ b/acgtsite/index.html
@@ -29,7 +29,7 @@
 
   <main class="index-main">
     <div class="login-section">
-      <div class="form1">
+      <div class="form1" style="visibility:{{log_visible}};">
       <h2>Login and Upload File</h2>
       <form id="login-form" action="/login" method="POST">
         <label for="username">Username:</label>
@@ -43,10 +43,10 @@
         <button type="submit">Login</button>
       </form>
       </div>
-      <div class="form2">
+      <div class="form2" style="visibility:{{upload_visible}}">
       <h2>Upload File </h2>
       <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
-        <label for="file">Select file:</label>
+        <label for="biodata-file">Select file:</label>
         <input type="file" id="biodata-file" name="file" required>
         <br>
 
